--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Bucket List</title>
-  <base href="https://JAGDISH0008.github.io/products-bucketlist/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://JAGDISH0008.github.io/products-bucketlist/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="styles.c2d576f9e6e2a3cbde03.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1a3c78b07cd6f16c6e9a.js" nomodule defer></script><script src="polyfills-es2015.1f913f16a2d346cc8bdc.js" type="module"></script><script src="main-es2015.53921785f054c342a52a.js" type="module"></script><script src="main-es5.53921785f054c342a52a.js" nomodule defer></script></body>
+<script src="runtime-es2015.47b50f1e0cc48fd0c0e8.js" type="module"></script><script src="runtime-es5.47b50f1e0cc48fd0c0e8.js" nomodule defer></script><script src="polyfills-es5.6e1055b712d0b250b19e.js" nomodule defer></script><script src="polyfills-es2015.6022d6f28e0500e60d30.js" type="module"></script><script src="main-es2015.d73d5130863ca996b609.js" type="module"></script><script src="main-es5.d73d5130863ca996b609.js" nomodule defer></script></body>
 </html>
